change layout width

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -28,9 +28,11 @@ $typographic-link-s-font-color: $color-secondary;
 $typographic-leading: round(16 * ($typographic-root-font-size / 100) * $typographic-base-line-height);
 
 // Layout
-$layout-post-single-max-width: 945px;
+// $layout-post-single-max-width: 945px;
+$layout-post-single-max-width: 1200px;
 $layout-post-single-width: $layout-post-single-max-width - 305px;
 
+// $layout-width: 1070px;
 $layout-width: 1070px;
 $layout-breakpoint-sm: 685px;
 $layout-breakpoint-md: 960px;
