UL LI 스타일 수정

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -107,11 +107,14 @@ strong {
 }
 
 ul {
-    list-style: square;
-    @include margin-bottom(1);
-    & li {
-        padding: 0 5px;
-        margin-bottom: 10px;
+    // list-style: square;
+    // @include margin-bottom(1);
+    // & li {
+    //     padding: 0 5px;
+    //     margin-bottom: 10px;
+    // }
+    & li p {
+        margin: 0;
     }
 }
 
