width 벗어나는 문제 해결

--- a/src/components/PageTemplateDetails/style.scss
+++ b/src/components/PageTemplateDetails/style.scss
@@ -14,5 +14,12 @@
         font-size: $typographic-base-font-size;
         @include line-height(1);
         @include margin(0, 0, 1);
+
+        & a {
+            text-decoration: underline;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+        }
+
     }
 }
