--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -107,12 +107,14 @@ strong {
 }
 
 ul {
+    padding: 0 20px;
     // list-style: square;
     // @include margin-bottom(1);
-    // & li {
-    //     padding: 0 5px;
-    //     margin-bottom: 10px;
-    // }
+    & li {
+        // padding: 0 5px;
+        margin-bottom: 8px;
+    }
+
     & li p {
         margin: 0;
     }
