--- a/src/components/PostTemplateDetails/style.scss
+++ b/src/components/PostTemplateDetails/style.scss
@@ -37,17 +37,31 @@
         }
         & a {
             text-decoration: underline;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
         }
         & .gatsby-highlight {
-            max-width: $layout-post-single-width;
-            margin-left: 15px;
-            margin-right: 15px;
+            // max-width: $layout-post-single-width;
+            // margin-left: 15px;
+            // margin-right: 15px;
             @include margin-bottom(1);
         }
+
+        & p >  code.language-text {
+            background-color: #f9f9f9;
+            color: #fd254c;
+            text-shadow: none;
+            // font-weight: bold;
+        }
+
         & :not(div) {
             max-width: $layout-post-single-width;
             margin-left: auto;
             margin-right: auto;
+
+        }
+        & img {
+            width: 100%;
         }
     }
     &__footer {
